--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ certifi==2019.11.28
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
-Django==3.0.3
+Django==1.11.29
 django-filter==2.2.0
 django-rest-swagger==2.2.0
-djangorestframework==3.11.0
+djangorestframework==3.9.2
 idna==2.9
 itypes==1.1.0
 Jinja2==2.11.1
@@ -18,3 +18,4 @@ simplejson==3.17.0
 sqlparse==0.3.1
 uritemplate==3.0.1
 urllib3==1.25.8
+PyMySQL==0.9.3
